--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.16",
     "lottie-react": "^2.4.1",
