--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "firebase": "^12.2.1",
@@ -17,10 +18,12 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
   },
